update translate vi,en

--- a/src/app/admin/admin-main/admin-unit/dialog/admin-filter-unit/admin-filter-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/dialog/admin-filter-unit/admin-filter-unit.component.html
@@ -21,7 +21,7 @@
 
     <div class="row" style="padding-top: 10px">
       <div class="col-md-6">
-        <div class="label text-color">Số điện thoại</div>
+        <div class="label text-color">{{'user.phone' | translate}}</div>
         <div class="input-data">
           <input type="text" formControlName="filter_phone" />
         </div>
