--- a/src/app/admin/admin-main/admin-user/admin-info-user/admin-info-user.component.html
+++ b/src/app/admin/admin-main/admin-user/admin-info-user/admin-info-user.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="label text-color">
-          {{ "Họ tên" | translate }} <span class="required-title">*</span>
+          {{'user.name' | translate}} <span class="required-title">*</span>
         </div>
         <div class="input-data">
           <input type="text" formControlName="name" />
