--- a/src/app/admin/admin-main/admin-user/admin-detail-user/admin-detail-user.component.html
+++ b/src/app/admin/admin-main/admin-user/admin-detail-user/admin-detail-user.component.html
@@ -9,7 +9,7 @@
                 <div class="row">
                     <div class="col-md-12">
 
-                        <div class="label text-color">{{'Họ tên' | translate }} <span class="required-title">*</span></div>
+                        <div class="label text-color">{{'user.name' | translate}} <span class="required-title">*</span></div>
                         <div class="input-data fff">
                             <input readonly type="text" formControlName="name">
                         </div>
