--- a/src/app/main/contract-signature/components/consider-contract/pki-dialog-sign/pki-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/pki-dialog-sign/pki-dialog-sign.component.html
@@ -6,7 +6,7 @@
     <div class="name-item">
       <div class="label_item">{{'user.phone' | translate}}: <span class="require_star">*</span></div>
       <div class="form-control input-line">
-        <input style="font-size: 14px;" autocomplete="off" type="text" [(ngModel)]="phoneNum" class="input-text" placeholder="Nhập số điện thoại" autofocus>
+        <input style="font-size: 14px;" autocomplete="off" type="text" [(ngModel)]="phoneNum" class="input-text" placeholder="{{ 'nhap_sdt' | translate }}" autofocus>
       </div>
     </div>
 
