--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -42,7 +42,7 @@
     <div class="signature-content" style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
         <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Loại ký: {{'sign.by.pki' | translate}}</span>
         <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign' | translate}}: {{nameCompany}}</span>
-        <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Số điện thoại: {{phonePKI}}</span>
+        <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.phone' | translate}}: {{phonePKI}}</span>
         <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
     </div>
 </div>
