update translate vi,en

--- a/src/app/admin/admin-main/admin-pack/dialog/admin-filter-pack/admin-filter-pack.component.html
+++ b/src/app/admin/admin-main/admin-pack/dialog/admin-filter-pack/admin-filter-pack.component.html
@@ -63,7 +63,7 @@
         </div>
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
-            <button class="cancel-button" (click)="dialog.closeAll()" type="button">Hủy</button>
+            <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'cancel' | translate}}</button>
             <button class="save-button" (click)="onSubmit()">Tìm kiếm</button>
         </div>
     </form>
