--- a/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
+++ b/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
@@ -51,7 +51,7 @@
       <button
         class="dx-button-form dx-button-close dx-button-90"
         (click)="dialog.closeAll()"
-        type="button">Hủy
+        type="button">{{'cancel' | translate}}
       </button>
       <button
         class="dx-button-form dx-button-submit dx-button-90"
