--- a/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
+++ b/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
@@ -10,7 +10,7 @@
                 <span style="color: '#106DB6'">{{'orginator' | translate}}</span>
                 <span style="color: #8B8B8B">({{this.timeCreate}})</span>
             </div>
-            <div *ngIf ="!this.reasonCancel" class="col-md-2" style="display: flex; flex-direction: column;text-align: center">
+            <div *ngIf ="!this.reasonCancel " class="col-md-2" style="display: flex; flex-direction: column;text-align: center">
                 <span style="color: '#106DB6'">{{'action' | translate}}</span>
             </div>
         </div>
@@ -44,7 +44,7 @@
             
 
                 <div class="col-md-2" style="flex-direction: column;text-align: center">
-                    <div *ngIf = "d.statusNumber != 0  && d.statusNumber !=4 && isHiddenButton">
+                    <div *ngIf = "d.statusNumber != 0  && d.statusNumber !=4 && isHiddenButton && d.statusNumber !=3">
                     <img src="../../assets/img/icon_sms_email2.svg" class="button_icon" ngbTooltip="{{'resend.sms.email' | translate}}" (click)="resendSmsEmail(d)"/>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                 </div>
 
                 <div class="col-md-2" style="flex-direction: column;text-align: center"> 
-                    <div *ngIf = "d.statusNumber != 0 && isHiddenButton && d.statusNumber !=4">
+                    <div *ngIf = "d.statusNumber != 0 && isHiddenButton && d.statusNumber !=4 && d.statusNumber !=3">
                         <img src="../../assets/img/icon_sms_email2.svg" class="button_icon" ngbTooltip="{{'resend.sms.email' | translate}}" (click)="resendSmsEmail(d)"/>
                     </div>
                 </div>
