--- a/src/app/main/contract/batch-contract/infor-contract-batch/infor-contract-batch.component.html
+++ b/src/app/main/contract/batch-contract/infor-contract-batch/infor-contract-batch.component.html
@@ -50,7 +50,7 @@
       <div class="col-md-12">
         <div class="form-group">
           <div style="padding-top: 10px;">
-            Bạn chưa có file mẫu? <a style="color: #106DB6; cursor: pointer;" (click)="downFileExample()">Tải file mẫu</a>
+            {{'not.have.sample.file' | translate}} <a style="color: #106DB6; cursor: pointer;" (click)="downFileExample()">{{'download.sample.file' | translate}}</a>
           </div>  
         </div>
       </div>
