--- a/src/app/main/dialog/reset-password-dialog/reset-password-dialog.component.html
+++ b/src/app/main/dialog/reset-password-dialog/reset-password-dialog.component.html
@@ -26,7 +26,7 @@
                     </div>
                 </div>
                 <div *ngIf="submitted && f.passwordOld.errors" class="invalid">
-                    <div *ngIf="f.passwordOld.errors.required">Mật khẩu cũ không được để trống</div>
+                    <div *ngIf="f.passwordOld.errors.required">{{"old.password.not.blank" | translate}}</div>
                 </div>
             </div>
         </div>
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div *ngIf="submitted && f.passwordNew.errors" class="invalid">
-                    <div *ngIf="f.passwordNew.errors.required">Mật khẩu mới không được để trống</div>
+                    <div *ngIf="f.passwordNew.errors.required">{{'new.password.not.blank' | translate }}</div>
                 </div>
             </div>
         </div>
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div *ngIf="submitted && f.confirmPasswordNew.errors" class="invalid">
-                    <div *ngIf="f.confirmPasswordNew.errors.required">Xác nhận mật khẩu mới không được để trống</div>
+                    <div *ngIf="f.confirmPasswordNew.errors.required">{{'confirm.new.password.not.blank' | translate }}</div>
                 </div>
             </div>
         </div>
@@ -94,8 +94,8 @@
         </div>
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
-            <button class="cancel-button" (click)="dialog.closeAll()" type="button">Hủy</button>
-            <button class="save-button" (click)="onSubmit()">Lưu lại</button>
+            <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'cancel' | translate}}</button>
+            <button class="save-button" (click)="onSubmit()">{{ "btn.save" | translate }}</button>
         </div>
     </form>
 </div>
