--- a/src/app/admin/admin-main/admin-unit/admin-active-unit/admin-active-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-active-unit/admin-active-unit.component.html
@@ -6,7 +6,7 @@
         <h3 style="font-family: inherit;">{{'Đồng ý kích hoạt tổ chức' | translate}}</h3>
     </div>
     <div class="row" style="justify-content: center;padding-top: 10px;">
-        <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'Hủy' | translate}}</button>
+        <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'cancel' | translate}}</button>
         <button class="save-button" (click)="onSubmit()">{{'Kích hoạt' | translate}}</button>
     </div>
 </div>
