--- a/src/app/admin/admin-main/admin-unit/dialog/admin-filter-unit/admin-filter-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/dialog/admin-filter-unit/admin-filter-unit.component.html
@@ -74,7 +74,7 @@
 
     <div class="row" style="justify-content: center; padding-top: 10px">
       <button class="cancel-button" (click)="dialog.closeAll()" type="button">
-        Hủy
+        {{'cancel' | translate}}
       </button>
       <button class="save-button" (click)="onSubmit()">Tìm kiếm</button>
     </div>
