--- a/src/app/admin/admin-main/admin-user/admin-delete-user/admin-delete-user.component.html
+++ b/src/app/admin/admin-main/admin-user/admin-delete-user/admin-delete-user.component.html
@@ -6,8 +6,8 @@
         <h3 style="font-family: inherit;">{{'Bạn có chắc chắn xóa người dùng này không?' | translate}}</h3>
     </div>
     <div class="row" style="justify-content: center;padding-top: 10px;">
-        <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'Hủy' | translate}}</button>
-        <button class="save-button" (click)="onSubmit()">{{'Đồng ý' | translate}}</button>
+        <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'cancel' | translate}}</button>
+        <button class="save-button" (click)="onSubmit()">{{'btn.accept' | translate}}</button>
     </div>
 </div>
    
