--- a/src/app/admin/admin-main/admin-user/admin-info-user/admin-info-user.component.html
+++ b/src/app/admin/admin-main/admin-user/admin-info-user/admin-info-user.component.html
@@ -50,7 +50,7 @@
       </div>
     </div>
     <div class="row" style="justify-content: center; padding-top: 0px">
-      <button (click)="updateInfor()" class="save-button">{{ "Lưu lại" | translate }}</button>
+      <button (click)="updateInfor()" class="save-button">{{ "btn.save" | translate }}</button>
     </div>
   </form>
 </div>
