--- a/src/app/main/contract/dialog/contract-connect-dialog/contract-connect-dialog.component.html
+++ b/src/app/main/contract/dialog/contract-connect-dialog/contract-connect-dialog.component.html
@@ -4,7 +4,7 @@
   </div>
   <div *ngIf="this.datas.length == 0" style="padding: 10px;display: flex;">
     <div style="background-color: rgb(156, 156, 156); border-radius: 10px;width: 20px;text-align: center;color: white;">!</div>
-    <a style="color: #106DB6; text-decoration: none; padding-left: 10px;">Không có hợp đồng liên quan</a>
+    <a style="color: #106DB6; text-decoration: none; padding-left: 10px;">{{'no.contract.involved'| translate}}</a>
   </div>
   <div *ngFor="let ref of this.datas; let i = index" style="padding: 10px;display: flex;">
       <div style="background-color: rgb(156, 156, 156); border-radius: 10px;width: 20px;text-align: center;color: white;">{{i+1}}</div>
