fix 1 người ký màn hình dashboard

--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -128,7 +128,7 @@
             </div>
 
               <div class="row" *ngFor="let s of item.notice_content.split('<br/>')">
-                <div class="col-md-12 item_contract_infor">
+                <div *ngIf="!s.includes('\nBên B: #PARTICIPANT_2#')" class="col-md-12 item_contract_infor">
                   <img src="../../../assets/img/user_icon.svg" width="12px"/>
                     <span *ngIf="this.lang == 'vi' || !this.lang"> {{s.replace("Bên B: #PARTICIPANT_2#","")}}</span>
                     <span *ngIf="this.lang == 'en'"> {{s.replace("Bên B: #PARTICIPANT_2#","").replace("Bên","Side")}}</span>
