--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -23,7 +23,7 @@
                   <div *ngIf="this.lang == 'en'" class="col-md-12 item_contract_name">{{item.notice_name.replace("Ký HĐ","Sign contract").replace("Quá hạn","Overdue").replace("Hoàn thành","Completed")}}</div>
               </div>
               <div class="row" *ngFor="let s of item.notice_content.split('<br/>')">
-                <div class="col-md-12 item_contract_infor">
+                <div *ngIf="!s.includes('\nBên B: #PARTICIPANT_2#')" class="col-md-12 item_contract_infor">
                   <img src="../../../assets/img/user_icon.svg" width="12px" />
                   <span *ngIf="this.lang == 'vi' || !this.lang"> {{s.replace("Bên B: #PARTICIPANT_2#","")}}</span>
                   <span *ngIf="this.lang == 'en'"> {{s.replace("Bên B: #PARTICIPANT_2#","").replace("Bên","Side")}}</span>
