--- a/src/app/main/contract-template/shared/model/preview-contract-template/preview-contract-template.component.html
+++ b/src/app/main/contract-template/shared/model/preview-contract-template/preview-contract-template.component.html
@@ -1,25 +1,16 @@
-<div
-  class="col-md-9 sample-contract__file viewer-pdf isDrag"
-  style="background-color: #f2f2f2; position: relative"
->
-  <div id="pdf-viewer-step-3">
-    <div
-      *ngFor="let d of this.convertToSignConfig()"
-      class="show-list-name-drag"
-    >
-      <!-- <div
-        class="resize-drag not-out-drop"
-        [id]="d.id"
-        style="z-index: -1"
-        #itemElement
-        [ngClass]="changeColorDrag(null, d)"
-        [ngStyle]="changePosition(d)"
-      >
-        <div class="name-sig-img-daky">
-          {{ d.name && !d.value ? d.name : "" }}
+<div class="sample-contract row">
+  <div class="sample-contract__file viewer-pdf isDrag" style="background-color: #f3f7f9; position: relative">
+    <div id="pdf-viewer-step-3">
+        <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">
+            <div class="resize-drag not-out-drop" [id]="d.id" style="z-index: -1" #itemElement (click)="getSignSelect(d)" [ngClass]="changeColorDrag(null,true)" [ngStyle]="changePosition(d)">
+                <div class="name-sig-img-daky">{{d.name ? d.name : ''}}</div>
+                <div class="sig-img-daky">
+                    <img src="assets/img/clear.svg" alt="">
+                    <img src="assets/img/border-clear.svg" alt="">
+                </div>
+                <app-sign-contract-template [datas]="datas" [sign]="d"></app-sign-contract-template>
+            </div>
         </div>
-        <!-- <app-sign-contract [datas]="datasBatch" [sign]="d"></app-sign-contract> -->
-      <!-- </div>  -->
     </div>
   </div>
 </div>
