--- a/src/app/main/contract-template/shared/model/preview-contract-template/preview-contract-template.component.scss
+++ b/src/app/main/contract-template/shared/model/preview-contract-template/preview-contract-template.component.scss
@@ -1,16 +1,26 @@
+//@font-face {
+//  font-family: 'SF_Dexend_deca';
+//  src: url('assets/scss/font/LexendDeca-VariableFont_wght.ttf') format('ttf');
+//}
+
 .sample-contract {
-  height: 100vh;
+  // height: calc(100vh - 287px);
+  height: calc(100vh);
 
   &__file {
+    //position: relative;
     .sig-img-daky{
       position: absolute;
       top: -11px;
       right: -8px;
+      //cursor: pointer;
     }
 
   }
 
   .viewer-pdf {
+    // height: calc(100vh - 287px);
+    height: calc(100vh);
     overflow-x: auto;
     text-align: center;
     background-color: rgba(239, 239, 239, 1);
@@ -20,12 +30,14 @@
   #pdf-viewer-step-3.view{
     padding-top: 15px;
     overflow-y: auto;
+    // height: calc(100vh - 122px);
+    height: calc(100vh);
     overflow-x: hidden;
-    height: 100vh
   }
 
   .viewer-pdf.isDrag{
-    height: 100vh;
+    // height: calc(100vh - 287px);
+    height: calc(100vh);
     overflow-x: auto;
     text-align: center;
     background-color: rgba(239, 239, 239, 1);
