preview mẫu hợp đồng

--- a/src/app/main/contract-template/shared/model/preview-contract-template/preview-contract-template.component.html
+++ b/src/app/main/contract-template/shared/model/preview-contract-template/preview-contract-template.component.html
@@ -14,3 +14,14 @@
     </div>
   </div>
 </div>
+
+<div class="footer-contract">
+  <div class="btn_footer">
+    <div class="label">
+
+    </div>
+    <div class="label">
+      <button (click)="cancel()" type="button" name="next" class="next action-button">Xác nhận</button>
+    </div>
+  </div>
+</div>
