--- a/src/app/main/contract-template/shared/model/preview-contract-template/preview-sign-contract-template/preview-sign-contract-template.component.scss
+++ b/src/app/main/contract-template/shared/model/preview-contract-template/preview-sign-contract-template/preview-sign-contract-template.component.scss
@@ -14,9 +14,9 @@
     color: #106DB6;
   }
   
-  .font-style {
-    font-size: 11px !important;
-  }
+  // .font-style {
+  //   font-size: 11px !important;
+  // }
   
   #input-text-value, #input-number-value {
     width: 100%;
