--- a/src/app/main/contract-signature/components/consider-contract/ekyc-dialog-sign/ekyc-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/ekyc-dialog-sign/ekyc-dialog-sign.component.html
@@ -9,9 +9,9 @@
   </div>
 
   <div *ngIf = "!webcamImage && !this.flagSuccess">
-    <webcam [height]="200" [width]="266" [trigger]="triggerObservable" (imageCapture)="handleImage($event)" *ngIf="showWebcam"
+    <webcam [width]="600" [height]="200" [trigger]="triggerObservable" (imageCapture)="handleImage($event)" *ngIf="showWebcam"
             [allowCameraSwitch]="allowCameraSwitch" [switchCamera]="nextWebcamObservable"
-            [videoOptions]="{width:{exact: 266}, height: {exact: 200}}" 
+            [videoOptions]="videoOptions" 
             [imageQuality]="1"
             (cameraSwitched)="cameraWasSwitched($event)"
             (initError)="handleInitError($event)"
@@ -21,7 +21,7 @@
     <button class="actionBtn" (click)="this.dialogRef.close()">Huỷ</button>
   </div>
   <div  *ngIf="webcamImage">
-    <img [height]="200" [width]="200"  [src]="webcamImage.imageAsDataUrl"/>
+    <img [height]="200" [width]="266"  [src]="webcamImage.imageAsDataUrl"/>
   </div>
 </div>
 
