--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -881,7 +881,7 @@
                   <div class="label_detail text-color">
 
                     <div>
-                      <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailPartSign_{{index}}" [value]="email" [(ngModel)]="email"/>
+                      <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailPartSign_{{index}}_{{id}}" [value]="email" [(ngModel)]="email"/>
                     </div>&nbsp;
                     <div>
                       {{'typeOfSignEmail' | translate}}
@@ -891,7 +891,7 @@
                 <div class="participants__name">
                   <div class="label_detail text-color">
                     <div>
-                      <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailPartSign_{{index}}" [(ngModel)]="d.login_by" [value]="phone"/>
+                      <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailPartSign_{{index}}_{{id}}" [(ngModel)]="d.login_by" [value]="phone"/>
                     </div>&nbsp;
                     <div>
                       {{'typeOfSignPhone' | translate}}
@@ -1310,7 +1310,7 @@
                     <div class="label_detail text-color">
   
                       <div>
-                        <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailPerson_{{index}}" [value]="email" [(ngModel)]="d.login_by"/>
+                        <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailPerson_{{index}}_{{id}}" [value]="email" [(ngModel)]="d.login_by"/>
                       </div>&nbsp;
                       <div>
                         {{'typeOfSignEmail' | translate}}
@@ -1320,7 +1320,7 @@
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div>
-                        <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailPerson_{{index}}" [(ngModel)]="d.login_by" [value]="phone"/>
+                        <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailPerson_{{index}}_{{id}}" [(ngModel)]="d.login_by" [value]="phone"/>
                       </div>&nbsp;
                       <div>
                         {{'typeOfSignPhone' | translate}}
