--- a/src/app/main/contract-signature/shared/model/dialog-reason-cancel/dialog-reason-cancel.component.html
+++ b/src/app/main/contract-signature/shared/model/dialog-reason-cancel/dialog-reason-cancel.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <h3 style="text-align: center; color: #106db6;">{{"reason.cancel.contract" | translate}}</h3>
+    <h3 style="text-align: center; color: #106db6;">{{'reasson.cancel.contract' | translate}}</h3>
     <div style="max-height: 405px; overflow: auto; font-size: 14px;">
         <div style="text-align: center; word-break: break-word;">
             <span>{{this.reasonCancel}}</span>
